<resources>
    <string name="app_name">Lochat</string>

    <string name="signing_label">Wprowadź swój pseudonim</string>
    <string name="signing_button">Zapisz</string>
    <string name="signing_incorrect_login">Pseudonim powinien zawierać jedynie litery i liczby</string>
    <string name="signing_username_length">%d / %d</string>

    <string name="creation_label">Wprowadź nazwę czatu</string>
    <string name="creation_button">Utwórz</string>
    <string name="creation_incorrect_name">Nazwa nie może być pusta.</string>
    <string name="title_activity_maps">Map</string>
</resources>